master: Edited favicon

--- a/public/translations/en/index.json
+++ b/public/translations/en/index.json
@@ -15,5 +15,11 @@
 			"follow": "Follow me",
 			"whatsappMessage": "Hello Diego, I want to talk with you about a project"
 		}
+	},
+	"about": {
+		"content": {
+			"title": "About",
+			"description": "I am a full stack developer from Peru with over 3 years of experience in web development applications. I always tend to implement the best solution I find for each task assigned to me and I always have good communication with my work team"
+		}
 	}
 }
