--- a/public/translations/es/index.json
+++ b/public/translations/es/index.json
@@ -10,7 +10,7 @@
 		},
 		"content": {
 			"title": "Soy Diego Rojas",
-			"description": "Desarrollador con mas de tres anos de experiencia en la industria IT. Gran talento y pasion por estar siempre actualizado en las nuevas tecnologias",
+			"description": "Desarrollador con mas de tres años de experiencia en la industria IT. Gran talento y pasion por estar siempre actualizado en las nuevas tecnologias",
 			"button": "Contactame",
 			"follow": "Sigueme",
 			"whatsappMessage": "Hola Diego, quiero saber mas sobre tus servicios"
