--- a/public/translations/es/index.json
+++ b/public/translations/es/index.json
@@ -15,5 +15,13 @@
 			"follow": "Sigueme",
 			"whatsappMessage": "Hola Diego, quiero saber mas sobre tus servicios"
 		}
+	},
+	"about": {
+		"content": {
+			"title": "Acerca de",
+			"description": "Soy un desarrollador full stack de Perú con más de 3 años de experiencia en aplicaciones de desarrollo web. Siempre tiendo a implementar la mejor solución que encuentro para cada tarea que me asignan y siempre tengo buena comunicación con mi equipo de trabajo.",
+			"follow": "Sigueme",
+			"button": "Contactame"
+		}
 	}
 }
