master: Added proejcts page responsive styles

--- a/public/translations/en/index.json
+++ b/public/translations/en/index.json
@@ -23,5 +23,10 @@
 			"follow": "Follow me",
 			"button": "Contact me"
 		}
+	},
+	"projects": {
+		"content": {
+			"title": "Projects"
+		}
 	}
 }
