--- a/public/translations/es/index.json
+++ b/public/translations/es/index.json
@@ -23,5 +23,10 @@
 			"follow": "Sigueme",
 			"button": "Contactame"
 		}
+	},
+	"projects": {
+		"content": {
+			"title": "Proyectos"
+		}
 	}
 }
